# flashcards

./: .gitignore  README.md  clean_answers.py  combine_json.py  process_excel.py  pyproject.toml  run.py
IGB/真题1-x/英文/: 真题1-01-英文.xls  真题1-02-英文.xls  真题1-03-英文.xls  真题1-04-英文.xls  真题1-05-英文.xls  真题1-06-英文.xls  真题1-07-英文.xls  真题1-08-英文.xls  真题1-09-英文.xls  真题1-10- 英文.xls  真题1-11- 英文.xls  真题1-12-英文.xls  真题1-13-英文.xls
IGB/真题2-x/英文xls/: 真题2-01_英文.xls  真题2-02_英文.xls  真题2-03_英文.xls  真题2-04_英文.xls  真题2-05_英文.xls  真题2-06_英文.xls  真题2-07_英文.xls  真题2-08_英文.xls  真题2-09_英文.xls  真题2-10_英文.xls  真题2-11_英文.xls  真题2-12_英文.xls  真题2-13_英文.xls  真题2-14_英文.xls  真题2-15_英文.xls  真题2-16_英文.xls
IGB/真题3-x/英文xls/: 真题3-1_英文.xls  真题3-2_英文.xls  真题3-3_英文.xls  真题3-4_英文.xls
flashcards/: __init__.py  app.py  update_answers.py
flashcards/core/: models.py
flashcards/data/: all_cards.jsonl  sample_cards.json  真题1-01-英文.json  真题1-02-英文.json  真题1-03-英文.json  真题1-04-英文.json  真题1-05-英文.json  真题1-06-英文.json  真题1-07-英文.json  真题1-08-英文.json  真题1-09-英文.json  真题1-10- 英文.json  真题1-11- 英文.json  真题1-12-英文.json  真题1-13-英文.json  真题2-01_英文.json  真题2-02_英文.json  真题2-03_英文.json  真题2-04_英文.json  真题2-05_英文.json  真题2-06_英文.json  真题2-07_英文.json  真题2-08_英文.json  真题2-09_英文.json  真题2-10_英文.json  真题2-11_英文.json  真题2-12_英文.json  真题2-13_英文.json  真题2-14_英文.json  真题2-15_英文.json  真题2-16_英文.json  真题3-1_英文.json  真题3-2_英文.json  真题3-3_英文.json  真题3-4_英文.json
flashcards/templates/: index.html
tests/: __init__.py
