[project]
name = "flashcards"
version = "0.1.0"
description = "A flashcards application"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "flask>=3.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "xlrd>=2.0.1",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"] 
